--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "swiper": "^9.2.4"
   }
 }
